@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

skinparam classAttributeIconSize 0

hide circle
hide methods

title Domain Model US003

class SystemAdministrator {
}

class Employee {
    - taxNumber
    - phoneNumber
}

class Passport{
    -passportNumber
    -dateOfIssue
    -dateOfExpiry
}

class Location {
    - street
    - city
    - district
    - state
    - zipCode
}

class Agency {
    - id
    - email
    - phoneNumber
}

class Role {
}

note right of Role
    - description:
        1- agent
        2- storeManager
        3- storeNetWorkManager
end note

SystemAdministrator "1" -- "*" Employee : registers >
Employee "*"--o "1" Agency : employs <
Employee "1"*--"1" Location
Employee "*" -- "*" Role
Agency "1"*--"1" Location
Employee "1"*--"1" Passport

@enduml